[oauth features] Connection with Google : give token

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,8 @@ APP_SECRET=secret
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> Google Oauth ###
+GOOGLE_CLIENT_ID=your_google_Id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your_secret_key
+###< Google Oauth ###
