replaces Oauth with JWT. Updates services and tests to use JWT. Fix to clear the cache when deleting a user. Added documentation and diagrams

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,9 @@ APP_SECRET=secret
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
-###> Google Oauth ###
-GOOGLE_CLIENT_ID=your_google_Id.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=your_secret_key
-###< Google Oauth ###
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+#JWT_PASSPHRASE=cd6614254ef1da9a1093002f283ff00b
+JWT_PASSPHRASE=yourPassPhrase
+###< lexik/jwt-authentication-bundle ###
